sintatico/sintatico.automaton
State 0:
prog' -> . prog [ # ]
-- On PROGRAMA shift to state 1
-- On prog shift to state 151

State 1:
prog -> PROGRAMA . LITSTRING declaracao INI list(comando) FPROGRAMA list(decFunctions) EOF [ # ]
-- On LITSTRING shift to state 2

State 2:
prog -> PROGRAMA LITSTRING . declaracao INI list(comando) FPROGRAMA list(decFunctions) EOF [ # ]
-- On VAR shift to state 3
-- On declaracao shift to state 17
-- On INI reduce production declaracao -> 

State 3:
declaracao -> VAR . list(variaveis) [ INI ]
-- On ID shift to state 4
-- On variaveis shift to state 7
-- On separated_nonempty_list(VIRG,ID) shift to state 8
-- On list(variaveis) shift to state 16
-- On INI reduce production list(variaveis) -> 

State 4:
separated_nonempty_list(VIRG,ID) -> ID . [ DEF ]
separated_nonempty_list(VIRG,ID) -> ID . VIRG separated_nonempty_list(VIRG,ID) [ DEF ]
-- On VIRG shift to state 5
-- On DEF reduce production separated_nonempty_list(VIRG,ID) -> ID 

State 5:
separated_nonempty_list(VIRG,ID) -> ID VIRG . separated_nonempty_list(VIRG,ID) [ DEF ]
-- On ID shift to state 4
-- On separated_nonempty_list(VIRG,ID) shift to state 6

State 6:
separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) . [ DEF ]
-- On DEF reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 

State 7:
list(variaveis) -> variaveis . list(variaveis) [ INI FPAR ]
-- On ID shift to state 4
-- On variaveis shift to state 7
-- On separated_nonempty_list(VIRG,ID) shift to state 8
-- On list(variaveis) shift to state 15
-- On INI reduce production list(variaveis) -> 
-- On FPAR reduce production list(variaveis) -> 

State 8:
variaveis -> separated_nonempty_list(VIRG,ID) . DEF tipo [ INI ID FPAR ]
-- On DEF shift to state 9

State 9:
variaveis -> separated_nonempty_list(VIRG,ID) DEF . tipo [ INI ID FPAR ]
-- On REAL shift to state 10
-- On INTEGER shift to state 11
-- On CARACTER shift to state 12
-- On BOOL shift to state 13
-- On tipo shift to state 14

State 10:
tipo -> REAL . [ VAR INI ID FPAR ]
-- On VAR reduce production tipo -> REAL 
-- On INI reduce production tipo -> REAL 
-- On ID reduce production tipo -> REAL 
-- On FPAR reduce production tipo -> REAL 

State 11:
tipo -> INTEGER . [ VAR INI ID FPAR ]
-- On VAR reduce production tipo -> INTEGER 
-- On INI reduce production tipo -> INTEGER 
-- On ID reduce production tipo -> INTEGER 
-- On FPAR reduce production tipo -> INTEGER 

State 12:
tipo -> CARACTER . [ VAR INI ID FPAR ]
-- On VAR reduce production tipo -> CARACTER 
-- On INI reduce production tipo -> CARACTER 
-- On ID reduce production tipo -> CARACTER 
-- On FPAR reduce production tipo -> CARACTER 

State 13:
tipo -> BOOL . [ VAR INI ID FPAR ]
-- On VAR reduce production tipo -> BOOL 
-- On INI reduce production tipo -> BOOL 
-- On ID reduce production tipo -> BOOL 
-- On FPAR reduce production tipo -> BOOL 

State 14:
variaveis -> separated_nonempty_list(VIRG,ID) DEF tipo . [ INI ID FPAR ]
-- On INI reduce production variaveis -> separated_nonempty_list(VIRG,ID) DEF tipo 
-- On ID reduce production variaveis -> separated_nonempty_list(VIRG,ID) DEF tipo 
-- On FPAR reduce production variaveis -> separated_nonempty_list(VIRG,ID) DEF tipo 

State 15:
list(variaveis) -> variaveis list(variaveis) . [ INI FPAR ]
-- On INI reduce production list(variaveis) -> variaveis list(variaveis) 
-- On FPAR reduce production list(variaveis) -> variaveis list(variaveis) 

State 16:
declaracao -> VAR list(variaveis) . [ INI ]
-- On INI reduce production declaracao -> VAR list(variaveis) 

State 17:
prog -> PROGRAMA LITSTRING declaracao . INI list(comando) FPROGRAMA list(decFunctions) EOF [ # ]
-- On INI shift to state 18

State 18:
prog -> PROGRAMA LITSTRING declaracao INI . list(comando) FPROGRAMA list(decFunctions) EOF [ # ]
-- On WHILE shift to state 19
-- On SWITCH shift to state 68
-- On SAIDA_LINHA shift to state 73
-- On SAIDA shift to state 77
-- On RETURN shift to state 81
-- On IF shift to state 83
-- On ID shift to state 25
-- On FOR shift to state 86
-- On ENTRADA shift to state 93
-- On variavel shift to state 97
-- On list(comando) shift to state 131
-- On comando_switch shift to state 102
-- On comando_se shift to state 103
-- On comando_saida_l shift to state 104
-- On comando_saida shift to state 105
-- On comando_return shift to state 106
-- On comando_for shift to state 107
-- On comando_entrada shift to state 108
-- On comando_enquanto shift to state 109
-- On comando_chamada shift to state 110
-- On comando_atribuicao shift to state 111
-- On comando shift to state 145
-- On chamada shift to state 114
-- On FPROGRAMA reduce production list(comando) -> 

State 19:
comando_enquanto -> WHILE . expressao DO nonempty_list(comando) FWHILE [ WHILE SWITCH SAIDA_LINHA SAIDA RETURN IF ID FWHILE FSWITCH FPROGRAMA FOR FIF FFUNCTION FFOR ENTRADA ELSE CASE_DEFAULT CASE ]
-- On MENOS shift to state 20
-- On LITSTRING shift to state 21
-- On LITINT shift to state 22
-- On LITCHAR shift to state 23
-- On LITBOOL shift to state 24
-- On ID shift to state 25
-- On APAR shift to state 27
-- On variavel shift to state 28
-- On expressao shift to state 66
-- On chamada shift to state 34

State 20:
expressao -> MENOS . expressao [ WHILE VIRG SWITCH SAIDA_LINHA SAIDA RETURN RESTO POTEN OR MULTI MENOS MAIS LTE LT IF ID GTE GT FWHILE FSWITCH FPROGRAMA FPAR FOR FIF FFUNCTION FFOR EQUALS ENTRADA ENTAO END ELSE DO DIV DIFER CASE_DEFAULT CASE AND ]
-- On MENOS shift to state 20
-- On LITSTRING shift to state 21
-- On LITINT shift to state 22
-- On LITCHAR shift to state 23
-- On LITBOOL shift to state 24
-- On ID shift to state 25
-- On APAR shift to state 27
-- On variavel shift to state 28
-- On expressao shift to state 65
-- On chamada shift to state 34

State 21:
expressao -> LITSTRING . [ WHILE VIRG SWITCH SAIDA_LINHA SAIDA RETURN RESTO POTEN OR MULTI MENOS MAIS LTE LT IF ID GTE GT FWHILE FSWITCH FPROGRAMA FPAR FOR FIF FFUNCTION FFOR EQUALS ENTRADA ENTAO END ELSE DO DIV DIFER CASE_DEFAULT CASE AND ]
-- On WHILE reduce production expressao -> LITSTRING 
-- On VIRG reduce production expressao -> LITSTRING 
-- On SWITCH reduce production expressao -> LITSTRING 
-- On SAIDA_LINHA reduce production expressao -> LITSTRING 
-- On SAIDA reduce production expressao -> LITSTRING 
-- On RETURN reduce production expressao -> LITSTRING 
-- On RESTO reduce production expressao -> LITSTRING 
-- On POTEN reduce production expressao -> LITSTRING 
-- On OR reduce production expressao -> LITSTRING 
-- On MULTI reduce production expressao -> LITSTRING 
-- On MENOS reduce production expressao -> LITSTRING 
-- On MAIS reduce production expressao -> LITSTRING 
-- On LTE reduce production expressao -> LITSTRING 
-- On LT reduce production expressao -> LITSTRING 
-- On IF reduce production expressao -> LITSTRING 
-- On ID reduce production expressao -> LITSTRING 
-- On GTE reduce production expressao -> LITSTRING 
-- On GT reduce production expressao -> LITSTRING 
-- On FWHILE reduce production expressao -> LITSTRING 
-- On FSWITCH reduce production expressao -> LITSTRING 
-- On FPROGRAMA reduce production expressao -> LITSTRING 
-- On FPAR reduce production expressao -> LITSTRING 
-- On FOR reduce production expressao -> LITSTRING 
-- On FIF reduce production expressao -> LITSTRING 
-- On FFUNCTION reduce production expressao -> LITSTRING 
-- On FFOR reduce production expressao -> LITSTRING 
-- On EQUALS reduce production expressao -> LITSTRING 
-- On ENTRADA reduce production expressao -> LITSTRING 
-- On ENTAO reduce production expressao -> LITSTRING 
-- On END reduce production expressao -> LITSTRING 
-- On ELSE reduce production expressao -> LITSTRING 
-- On DO reduce production expressao -> LITSTRING 
-- On DIV reduce production expressao -> LITSTRING 
-- On DIFER reduce production expressao -> LITSTRING 
-- On CASE_DEFAULT reduce production expressao -> LITSTRING 
-- On CASE reduce production expressao -> LITSTRING 
-- On AND reduce production expressao -> LITSTRING 

State 22:
expressao -> LITINT . [ WHILE VIRG SWITCH SAIDA_LINHA SAIDA RETURN RESTO POTEN OR MULTI MENOS MAIS LTE LT IF ID GTE GT FWHILE FSWITCH FPROGRAMA FPAR FOR FIF FFUNCTION FFOR EQUALS ENTRADA ENTAO END ELSE DO DIV DIFER CASE_DEFAULT CASE AND ]
-- On WHILE reduce production expressao -> LITINT 
-- On VIRG reduce production expressao -> LITINT 
-- On SWITCH reduce production expressao -> LITINT 
-- On SAIDA_LINHA reduce production expressao -> LITINT 
-- On SAIDA reduce production expressao -> LITINT 
-- On RETURN reduce production expressao -> LITINT 
-- On RESTO reduce production expressao -> LITINT 
-- On POTEN reduce production expressao -> LITINT 
-- On OR reduce production expressao -> LITINT 
-- On MULTI reduce production expressao -> LITINT 
-- On MENOS reduce production expressao -> LITINT 
-- On MAIS reduce production expressao -> LITINT 
-- On LTE reduce production expressao -> LITINT 
-- On LT reduce production expressao -> LITINT 
-- On IF reduce production expressao -> LITINT 
-- On ID reduce production expressao -> LITINT 
-- On GTE reduce production expressao -> LITINT 
-- On GT reduce production expressao -> LITINT 
-- On FWHILE reduce production expressao -> LITINT 
-- On FSWITCH reduce production expressao -> LITINT 
-- On FPROGRAMA reduce production expressao -> LITINT 
-- On FPAR reduce production expressao -> LITINT 
-- On FOR reduce production expressao -> LITINT 
-- On FIF reduce production expressao -> LITINT 
-- On FFUNCTION reduce production expressao -> LITINT 
-- On FFOR reduce production expressao -> LITINT 
-- On EQUALS reduce production expressao -> LITINT 
-- On ENTRADA reduce production expressao -> LITINT 
-- On ENTAO reduce production expressao -> LITINT 
-- On END reduce production expressao -> LITINT 
-- On ELSE reduce production expressao -> LITINT 
-- On DO reduce production expressao -> LITINT 
-- On DIV reduce production expressao -> LITINT 
-- On DIFER reduce production expressao -> LITINT 
-- On CASE_DEFAULT reduce production expressao -> LITINT 
-- On CASE reduce production expressao -> LITINT 
-- On AND reduce production expressao -> LITINT 

State 23:
expressao -> LITCHAR . [ WHILE VIRG SWITCH SAIDA_LINHA SAIDA RETURN RESTO POTEN OR MULTI MENOS MAIS LTE LT IF ID GTE GT FWHILE FSWITCH FPROGRAMA FPAR FOR FIF FFUNCTION FFOR EQUALS ENTRADA ENTAO END ELSE DO DIV DIFER CASE_DEFAULT CASE AND ]
-- On WHILE reduce production expressao -> LITCHAR 
-- On VIRG reduce production expressao -> LITCHAR 
-- On SWITCH reduce production expressao -> LITCHAR 
-- On SAIDA_LINHA reduce production expressao -> LITCHAR 
-- On SAIDA reduce production expressao -> LITCHAR 
-- On RETURN reduce production expressao -> LITCHAR 
-- On RESTO reduce production expressao -> LITCHAR 
-- On POTEN reduce production expressao -> LITCHAR 
-- On OR reduce production expressao -> LITCHAR 
-- On MULTI reduce production expressao -> LITCHAR 
-- On MENOS reduce production expressao -> LITCHAR 
-- On MAIS reduce production expressao -> LITCHAR 
-- On LTE reduce production expressao -> LITCHAR 
-- On LT reduce production expressao -> LITCHAR 
-- On IF reduce production expressao -> LITCHAR 
-- On ID reduce production expressao -> LITCHAR 
-- On GTE reduce production expressao -> LITCHAR 
-- On GT reduce production expressao -> LITCHAR 
-- On FWHILE reduce production expressao -> LITCHAR 
-- On FSWITCH reduce production expressao -> LITCHAR 
-- On FPROGRAMA reduce production expressao -> LITCHAR 
-- On FPAR reduce production expressao -> LITCHAR 
-- On FOR reduce production expressao -> LITCHAR 
-- On FIF reduce production expressao -> LITCHAR 
-- On FFUNCTION reduce production expressao -> LITCHAR 
-- On FFOR reduce production expressao -> LITCHAR 
-- On EQUALS reduce production expressao -> LITCHAR 
-- On ENTRADA reduce production expressao -> LITCHAR 
-- On ENTAO reduce production expressao -> LITCHAR 
-- On END reduce production expressao -> LITCHAR 
-- On ELSE reduce production expressao -> LITCHAR 
-- On DO reduce production expressao -> LITCHAR 
-- On DIV reduce production expressao -> LITCHAR 
-- On DIFER reduce production expressao -> LITCHAR 
-- On CASE_DEFAULT reduce production expressao -> LITCHAR 
-- On CASE reduce production expressao -> LITCHAR 
-- On AND reduce production expressao -> LITCHAR 

State 24:
expressao -> LITBOOL . [ WHILE VIRG SWITCH SAIDA_LINHA SAIDA RETURN RESTO POTEN OR MULTI MENOS MAIS LTE LT IF ID GTE GT FWHILE FSWITCH FPROGRAMA FPAR FOR FIF FFUNCTION FFOR EQUALS ENTRADA ENTAO END ELSE DO DIV DIFER CASE_DEFAULT CASE AND ]
-- On WHILE reduce production expressao -> LITBOOL 
-- On VIRG reduce production expressao -> LITBOOL 
-- On SWITCH reduce production expressao -> LITBOOL 
-- On SAIDA_LINHA reduce production expressao -> LITBOOL 
-- On SAIDA reduce production expressao -> LITBOOL 
-- On RETURN reduce production expressao -> LITBOOL 
-- On RESTO reduce production expressao -> LITBOOL 
-- On POTEN reduce production expressao -> LITBOOL 
-- On OR reduce production expressao -> LITBOOL 
-- On MULTI reduce production expressao -> LITBOOL 
-- On MENOS reduce production expressao -> LITBOOL 
-- On MAIS reduce production expressao -> LITBOOL 
-- On LTE reduce production expressao -> LITBOOL 
-- On LT reduce production expressao -> LITBOOL 
-- On IF reduce production expressao -> LITBOOL 
-- On ID reduce production expressao -> LITBOOL 
-- On GTE reduce production expressao -> LITBOOL 
-- On GT reduce production expressao -> LITBOOL 
-- On FWHILE reduce production expressao -> LITBOOL 
-- On FSWITCH reduce production expressao -> LITBOOL 
-- On FPROGRAMA reduce production expressao -> LITBOOL 
-- On FPAR reduce production expressao -> LITBOOL 
-- On FOR reduce production expressao -> LITBOOL 
-- On FIF reduce production expressao -> LITBOOL 
-- On FFUNCTION reduce production expressao -> LITBOOL 
-- On FFOR reduce production expressao -> LITBOOL 
-- On EQUALS reduce production expressao -> LITBOOL 
-- On ENTRADA reduce production expressao -> LITBOOL 
-- On ENTAO reduce production expressao -> LITBOOL 
-- On END reduce production expressao -> LITBOOL 
-- On ELSE reduce production expressao -> LITBOOL 
-- On DO reduce production expressao -> LITBOOL 
-- On DIV reduce production expressao -> LITBOOL 
-- On DIFER reduce production expressao -> LITBOOL 
-- On CASE_DEFAULT reduce production expressao -> LITBOOL 
-- On CASE reduce production expressao -> LITBOOL 
-- On AND reduce production expressao -> LITBOOL 

State 25:
chamada -> ID . APAR separated_nonempty_list(VIRG,expressao) FPAR [ WHILE VIRG SWITCH SAIDA_LINHA SAIDA RETURN RESTO POTEN OR MULTI MENOS MAIS LTE LT IF ID GTE GT FWHILE FSWITCH FPROGRAMA FPAR FOR FIF FFUNCTION FFOR EQUALS ENTRADA ENTAO END ELSE DO DIV DIFER CASE_DEFAULT CASE AND ]
variavel -> ID . [ WHILE VIRG SWITCH SAIDA_LINHA SAIDA RETURN RESTO POTEN OR MULTI MENOS MAIS LTE LT IF ID GTE GT FWHILE FSWITCH FPROGRAMA FPAR FOR FIF FFUNCTION FFOR EQUALS ENTRADA ENTAO END ELSE DO DIV DIFER CASE_DEFAULT CASE ATRIB AND ]
-- On APAR shift to state 26
-- On WHILE reduce production variavel -> ID 
-- On VIRG reduce production variavel -> ID 
-- On SWITCH reduce production variavel -> ID 
-- On SAIDA_LINHA reduce production variavel -> ID 
-- On SAIDA reduce production variavel -> ID 
-- On RETURN reduce production variavel -> ID 
-- On RESTO reduce production variavel -> ID 
-- On POTEN reduce production variavel -> ID 
-- On OR reduce production variavel -> ID 
-- On MULTI reduce production variavel -> ID 
-- On MENOS reduce production variavel -> ID 
-- On MAIS reduce production variavel -> ID 
-- On LTE reduce production variavel -> ID 
-- On LT reduce production variavel -> ID 
-- On IF reduce production variavel -> ID 
-- On ID reduce production variavel -> ID 
-- On GTE reduce production variavel -> ID 
-- On GT reduce production variavel -> ID 
-- On FWHILE reduce production variavel -> ID 
-- On FSWITCH reduce production variavel -> ID 
-- On FPROGRAMA reduce production variavel -> ID 
-- On FPAR reduce production variavel -> ID 
-- On FOR reduce production variavel -> ID 
-- On FIF reduce production variavel -> ID 
-- On FFUNCTION reduce production variavel -> ID 
-- On FFOR reduce production variavel -> ID 
-- On EQUALS reduce production variavel -> ID 
-- On ENTRADA reduce production variavel -> ID 
-- On ENTAO reduce production variavel -> ID 
-- On END reduce production variavel -> ID 
-- On ELSE reduce production variavel -> ID 
-- On DO reduce production variavel -> ID 
-- On DIV reduce production variavel -> ID 
-- On DIFER reduce production variavel -> ID 
-- On CASE_DEFAULT reduce production variavel -> ID 
-- On CASE reduce production variavel -> ID 
-- On ATRIB reduce production variavel -> ID 
-- On AND reduce production variavel -> ID 

State 26:
chamada -> ID APAR . separated_nonempty_list(VIRG,expressao) FPAR [ WHILE VIRG SWITCH SAIDA_LINHA SAIDA RETURN RESTO POTEN OR MULTI MENOS MAIS LTE LT IF ID GTE GT FWHILE FSWITCH FPROGRAMA FPAR FOR FIF FFUNCTION FFOR EQUALS ENTRADA ENTAO END ELSE DO DIV DIFER CASE_DEFAULT CASE AND ]
-- On MENOS shift to state 20
-- On LITSTRING shift to state 21
-- On LITINT shift to state 22
-- On LITCHAR shift to state 23
-- On LITBOOL shift to state 24
-- On ID shift to state 25
-- On APAR shift to state 27
-- On variavel shift to state 28
-- On separated_nonempty_list(VIRG,expressao) shift to state 60
-- On expressao shift to state 62
-- On chamada shift to state 34

State 27:
expressao -> APAR . expressao FPAR [ WHILE VIRG SWITCH SAIDA_LINHA SAIDA RETURN RESTO POTEN OR MULTI MENOS MAIS LTE LT IF ID GTE GT FWHILE FSWITCH FPROGRAMA FPAR FOR FIF FFUNCTION FFOR EQUALS ENTRADA ENTAO END ELSE DO DIV DIFER CASE_DEFAULT CASE AND ]
-- On MENOS shift to state 20
-- On LITSTRING shift to state 21
-- On LITINT shift to state 22
-- On LITCHAR shift to state 23
-- On LITBOOL shift to state 24
-- On ID shift to state 25
-- On APAR shift to state 27
-- On variavel shift to state 28
-- On expressao shift to state 29
-- On chamada shift to state 34

State 28:
expressao -> variavel . [ WHILE VIRG SWITCH SAIDA_LINHA SAIDA RETURN RESTO POTEN OR MULTI MENOS MAIS LTE LT IF ID GTE GT FWHILE FSWITCH FPROGRAMA FPAR FOR FIF FFUNCTION FFOR EQUALS ENTRADA ENTAO END ELSE DO DIV DIFER CASE_DEFAULT CASE AND ]
-- On WHILE reduce production expressao -> variavel 
-- On VIRG reduce production expressao -> variavel 
-- On SWITCH reduce production expressao -> variavel 
-- On SAIDA_LINHA reduce production expressao -> variavel 
-- On SAIDA reduce production expressao -> variavel 
-- On RETURN reduce production expressao -> variavel 
-- On RESTO reduce production expressao -> variavel 
-- On POTEN reduce production expressao -> variavel 
-- On OR reduce production expressao -> variavel 
-- On MULTI reduce production expressao -> variavel 
-- On MENOS reduce production expressao -> variavel 
-- On MAIS reduce production expressao -> variavel 
-- On LTE reduce production expressao -> variavel 
-- On LT reduce production expressao -> variavel 
-- On IF reduce production expressao -> variavel 
-- On ID reduce production expressao -> variavel 
-- On GTE reduce production expressao -> variavel 
-- On GT reduce production expressao -> variavel 
-- On FWHILE reduce production expressao -> variavel 
-- On FSWITCH reduce production expressao -> variavel 
-- On FPROGRAMA reduce production expressao -> variavel 
-- On FPAR reduce production expressao -> variavel 
-- On FOR reduce production expressao -> variavel 
-- On FIF reduce production expressao -> variavel 
-- On FFUNCTION reduce production expressao -> variavel 
-- On FFOR reduce production expressao -> variavel 
-- On EQUALS reduce production expressao -> variavel 
-- On ENTRADA reduce production expressao -> variavel 
-- On ENTAO reduce production expressao -> variavel 
-- On END reduce production expressao -> variavel 
-- On ELSE reduce production expressao -> variavel 
-- On DO reduce production expressao -> variavel 
-- On DIV reduce production expressao -> variavel 
-- On DIFER reduce production expressao -> variavel 
-- On CASE_DEFAULT reduce production expressao -> variavel 
-- On CASE reduce production expressao -> variavel 
-- On AND reduce production expressao -> variavel 

State 29:
expressao -> expressao . MAIS expressao [ RESTO POTEN OR MULTI MENOS MAIS LTE LT GTE GT FPAR EQUALS DIV DIFER AND ]
expressao -> expressao . MENOS expressao [ RESTO POTEN OR MULTI MENOS MAIS LTE LT GTE GT FPAR EQUALS DIV DIFER AND ]
expressao -> expressao . MULTI expressao [ RESTO POTEN OR MULTI MENOS MAIS LTE LT GTE GT FPAR EQUALS DIV DIFER AND ]
expressao -> expressao . DIV expressao [ RESTO POTEN OR MULTI MENOS MAIS LTE LT GTE GT FPAR EQUALS DIV DIFER AND ]
expressao -> expressao . RESTO expressao [ RESTO POTEN OR MULTI MENOS MAIS LTE LT GTE GT FPAR EQUALS DIV DIFER AND ]
expressao -> expressao . POTEN expressao [ RESTO POTEN OR MULTI MENOS MAIS LTE LT GTE GT FPAR EQUALS DIV DIFER AND ]
expressao -> expressao . LT expressao [ RESTO POTEN OR MULTI MENOS MAIS LTE LT GTE GT FPAR EQUALS DIV DIFER AND ]
expressao -> expressao . GT expressao [ RESTO POTEN OR MULTI MENOS MAIS LTE LT GTE GT FPAR EQUALS DIV DIFER AND ]
expressao -> expressao . LTE expressao [ RESTO POTEN OR MULTI MENOS MAIS LTE LT GTE GT FPAR EQUALS DIV DIFER AND ]
expressao -> expressao . GTE expressao [ RESTO POTEN OR MULTI MENOS MAIS LTE LT GTE GT FPAR EQUALS DIV DIFER AND ]
expressao -> expressao . EQUALS expressao [ RESTO POTEN OR MULTI MENOS MAIS LTE LT GTE GT FPAR EQUALS DIV DIFER AND ]
expressao -> expressao . DIFER expressao [ RESTO POTEN OR MULTI MENOS MAIS LTE LT GTE GT FPAR EQUALS DIV DIFER AND ]
expressao -> expressao . AND expressao [ RESTO POTEN OR MULTI MENOS MAIS LTE LT GTE GT FPAR EQUALS DIV DIFER AND ]
expressao -> expressao . OR expressao [ RESTO POTEN OR MULTI MENOS MAIS LTE LT GTE GT FPAR EQUALS DIV DIFER AND ]
expressao -> APAR expressao . FPAR [ WHILE VIRG SWITCH SAIDA_LINHA SAIDA RETURN RESTO POTEN OR MULTI MENOS MAIS LTE LT IF ID GTE GT FWHILE FSWITCH FPROGRAMA FPAR FOR FIF FFUNCTION FFOR EQUALS ENTRADA ENTAO END ELSE DO DIV DIFER CASE_DEFAULT CASE AND ]
-- On RESTO shift to state 30
-- On POTEN shift to state 37
-- On OR shift to state 43
-- On MULTI shift to state 32
-- On MENOS shift to state 39
-- On MAIS shift to state 41
-- On LTE shift to state 45
-- On LT shift to state 47
-- On GTE shift to state 49
-- On GT shift to state 51
-- On FPAR shift to state 57
-- On EQUALS shift to state 53
-- On DIV shift to state 35
-- On DIFER shift to state 55
-- On AND shift to state 58

State 30:
expressao -> expressao RESTO . expressao [ WHILE VIRG SWITCH SAIDA_LINHA SAIDA RETURN RESTO POTEN OR MULTI MENOS MAIS LTE LT IF ID GTE GT FWHILE FSWITCH FPROGRAMA FPAR FOR FIF FFUNCTION FFOR EQUALS ENTRADA ENTAO END ELSE DO DIV DIFER CASE_DEFAULT CASE AND ]
-- On MENOS shift to state 20
-- On LITSTRING shift to state 21
-- On LITINT shift to state 22
-- On LITCHAR shift to state 23
-- On LITBOOL shift to state 24
-- On ID shift to state 25
-- On APAR shift to state 27
-- On variavel shift to state 28
-- On expressao shift to state 31
-- On chamada shift to state 34
